# Flugsimulator

./: .gitignore  Dockerfile  README.md  TODOs.txt  entrypoint.sh  ros2_dependencies.txt  ros_entrypoint.sh
abbflightsim_ws/src/abb_irb7600/: package.xml
abbflightsim_ws/src/abb_irb7600/config/: ros2_control.yaml
abbflightsim_ws/src/abb_irb7600/description/urdf/: common_materials.xacro  irb7600_150_350.gazebo  irb7600_150_350_macro.xacro
abbflightsim_ws/src/abb_irb7600/launch/: launch_gz_robot.py
abbflightsim_ws/src/irb2/irb7600_qtinterface/src/: qt_gui_node.cpp
abbflightsim_ws/src/irb7600_Qtinterface/: CMakeLists.txt  package.xml
abbflightsim_ws/src/irb7600_Qtinterface/include/irb7600_qtinterface/: ros_interface.hpp  ui_irb7600_widget.hpp
abbflightsim_ws/src/irb7600_Qtinterface/src/: qt_gui_node.cpp  ros_interface.cpp
abbflightsim_ws/src/irb7600_bringup/: CMakeLists.txt  package.xml
abbflightsim_ws/src/irb7600_bringup/scripts/: irb7600_gazebo.sh  irb7600_gz_moveit.sh  mycobot_gazebo.sh
abbflightsim_ws/src/irb7600_description/: CMakeLists.txt  package.xml
abbflightsim_ws/src/irb7600_description/launch/: robot_state_publisher.launch.py
abbflightsim_ws/src/irb7600_description/rviz/: irb7600_view.rviz
abbflightsim_ws/src/irb7600_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  irb7600_ros2_control.urdf.xacro
abbflightsim_ws/src/irb7600_description/urdf/mech/: common_materials.xacro  irb7600_150_350_macro.xacro
abbflightsim_ws/src/irb7600_description/urdf/robots/: irb7600_150_350.urdf.xacro
abbflightsim_ws/src/irb7600_gazebo/: CMakeLists.txt  package.xml
abbflightsim_ws/src/irb7600_gazebo/launch/: irb7600.gazebo.launch.py
abbflightsim_ws/src/irb7600_monitoring/: CMakeLists.txt  package.xml
abbflightsim_ws/src/irb7600_monitoring/src/: monitor_jointpos.cpp
abbflightsim_ws/src/irb7600_moveit2_config_manual_setup/: CMakeLists.txt  package.xml
abbflightsim_ws/src/irb7600_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
abbflightsim_ws/src/irb7600_moveit_config/config/: pilz_indstrial_motion_planner_planning.yaml  ros2_controllers.yaml  ros2_controllers_template.yaml
abbflightsim_ws/src/irb7600_moveit_config/config/irb7600/: irb7600.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
abbflightsim_ws/src/irb7600_moveit_config/launch/: load_ros2_controllers.launch.py  move_group.launch.py
abbflightsim_ws/src/irb7600_moveit_config/src/: drive_2221.cpp  drive_with_rviz.cpp  hello_moveit.cpp
abbflightsim_ws/src/irb7600_qtinterface/: MainWindow - untitled
abbflightsim_ws/src/irb7600_qtinterface/ui/: mainwindow.ui
abbflightsim_ws/src/irb7600_rviz_visualization/: CMakeLists.txt  package.xml
abbflightsim_ws/src/irb7600_rviz_visualization/include/irb7600_rviz_visualization/: visualize_stuff.hpp
abbflightsim_ws/src/irb7600_rviz_visualization/launch/: visualize.launch.py
abbflightsim_ws/src/irb7600_rviz_visualization/rviz/: irb7600_visual.rviz
abbflightsim_ws/src/irb7600_rviz_visualization/src/: main_visualize_stuff.cpp  visualize_stuff.cpp
config/: my_config.yaml
flightsim_ws/: readme.md
flightsim_ws/src/abb_irb7600/: CMakeLists.txt  package.xml
flightsim_ws/src/abb_irb7600/description/urdf/: irb7600_150_350.urdf  irb7600_150_350.urdf.xacro  irb7600_150_350_macro.xacro
flightsim_ws/src/abb_irb7600/launch/: display.launch.py  launch_gazebo.py  view_robot.launch.py
flightsim_ws/src/urdf_tutorial/: setup.cfg
flightsim_ws/src/urdf_tutorial/launch/: launch_everything.py
flightsim_ws/src/urdftest/: package.xml  setup.cfg  setup.py
flightsim_ws/src/urdftest/launch/: launch_everything.py
ros2control_ws/src/mycobot_bringup/: CMakeLists.txt  package.xml
ros2control_ws/src/mycobot_bringup/scripts/: mycobot_280_gazebo.sh
ros2control_ws/src/mycobot_description/launch/: robot_state_publisher.launch.py
ros2control_ws/src/mycobot_gazebo/: CMakeLists.txt  package.xml
ros2control_ws/src/mycobot_moveit_config/: CMakeLists.txt  package.xml
ros2control_ws/src/mycobot_system_tests/: package.xml
