<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irb7600_monitoring</name>
  <version>0.0.0</version>
  <description>Monitor joint positions from the arm controller</description>
  <maintainer email="hisham@example.com">Hisham Farid</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Required for JointTrajectoryControllerState -->
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- Optional: if you use any introspection/logging/testing tools -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
